--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,24 @@ img {
    color: #2E2F42;
    padding: 24px 0;
    display: block;
+   display: flex;
+   justify-content: start;
+   align-items: end;
+   position: relative;
+   transition-property: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-link:hover::after {
+   content: "";
+   position: absolute;
+   left: 0;
+   bottom: -1px;
+   display: block;
+   border-radius: 2px;
+   width: 48px;
+   height: 4px;
+   background-color: #404bbf;
+   margin: 10px auto 0;
 }
 
 .header-menu .header-link:hover {
@@ -105,6 +123,7 @@ img {
    color: #434455;
    font-style: normal;
    text-decoration: none;
+   transition-property: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-menu .contact-link:hover {
@@ -122,6 +141,14 @@ img {
 .hero {
    background-color: #2E2F42;
    padding: 188px 0;
+   background-image: linear-gradient(to bottom,
+         rgba(46, 47, 66, 0.7),
+         rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1\ \(1\).jpg);
+   background-repeat: no-repeat;
+   max-width: 1440px;
+   background-position: center;
+   background-size: cover;
+   margin: 0 auto;
 }
 
 .hero-container {
@@ -133,11 +160,12 @@ img {
    line-height: 1.07;
    letter-spacing: 0.02em;
    color: white;
-   background-color: #2E2F42;
+   background-color: transparent;
    text-align: center;
    max-width: 496px;
    margin: 0 auto;
    margin-bottom: 48px;
+
    
 }
 
@@ -158,6 +186,8 @@ img {
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
    border: none;
    min-width: 169px;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .button:hover {
@@ -198,6 +228,18 @@ img {
    flex-direction: column;
    gap: 8px;
    width: calc((100% - 72px) / 4);
+}
+
+.icon-box {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 264px;
+   height: 112px;
+   border: 1px solid #8e8f99;
+   border-radius: 4px;
+   background-color: #f4f4fd;
+   margin-bottom: 8px;
 }
 
 .features-title{
@@ -274,6 +316,38 @@ img {
    text-align: center;
 }
 
+.team-list {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: row;
+   gap: 24px;
+}
+
+.team-item {
+   width: 40px;
+   height: 40px;
+}
+
+.team-link {
+   width: 100%;
+   height: 100%;  
+   border-radius: 50%;   
+   background-color: #4D5AE5;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-icon {
+   fill: #F4F4FD;
+}
+
+.team-link:hover {
+   background-color: #404BBF;
+}
+
 .portfolio-container {
    display: block;
 }
@@ -307,6 +381,36 @@ img {
 
 .portfolio-list {
    width: calc((100% - 48px) / 3);
+   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list:hover {
+   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.img-box {
+   position: relative;
+   overflow: hidden;
+}
+
+.img-text {
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #f4f4fd;
+   position: absolute;
+   top: 0;
+   transform: translateY(100%);
+   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   background-color: #4D5AE5;
+   padding: 40px 32px;
+   width: 100%;
+   height: 100%;
+}
+
+.portfolio-list:hover .img-text {
+   transform: translateY(0%);
 }
 
 .portfolio-title {
@@ -331,9 +435,14 @@ img {
    max-height: 312px;
 }
 
-/* .footer-container {
+.footer-container {
+   display: flex;
+   align-items: baseline;
+}
 
-} */
+.footer-box {
+   margin-right: 120px;
+}
 
 .footer-logo {
    font-family: "Raleway", sans-serif;
@@ -358,4 +467,33 @@ img {
    line-height: 1.5;
    letter-spacing: 0.02em;
    max-width: 264px;
+   margin-right: 156px;
+}
+
+.footer-media {
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #fff;
+   padding: 0 112px 16px 0 ;
+}
+
+.footer-list {
+   gap: 16px;
+}
+
+.footer-link {
+   width: 100%;
+   height: 100%;
+   border-radius: 50%;
+   background-color: #4D5AE5;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-link:hover {
+   background-color: #31D0AA;
 }
