--- a/css/styles.css
+++ b/css/styles.css
@@ -72,10 +72,6 @@ img {
    gap: 40px;
 }
 
-.first-header-list {
-   color: #404bbf;
-}
-
 .header-link {
    text-decoration: none;
    color: #2E2F42;
@@ -86,6 +82,10 @@ img {
    align-items: end;
    position: relative;
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.first-link {
+   color: #404bbf;
 }
 
 .header-menu .header-link:hover {
